--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+           
+            <!--
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.11</version>
@@ -75,6 +77,68 @@
                     </execution>
                 </executions>
             </plugin>
+                        -->
+                        
+                        
+                        
+                        
+                        <plugin>
+<groupId>org.jacoco</groupId>
+<artifactId>jacoco-maven-plugin</artifactId>
+<configuration>
+    <destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
+    <dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>  
+ </configuration>
+<executions>
+<execution>
+ <id>pre-integration-test</id 
+<phase>pre-integration-test</phase>
+<goals>
+<goal>prepare-agent</goal>
+</goals> 
+    </execution>
+ <execution>
+<id>post-integration-test</id>
+<phase>post-integration-test</phase>
+<goals>
+<goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>                                                                                                                                                                                <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <jacoco-agent.destfile>${project.build.directory}/coverage-reports/jacoco-it.exec</jacoco-agent.destfile>
+                    </systemPropertyVariables>
+                    <encoding>UTF-8</encoding>
+                    <skipTests>false</skipTests>
+                    <runOrder>alphabetical</runOrder>
+                    <includes>
+                        ....<There are integration tests>
+                    </includes>
+                    <excludes>
+                        ....
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal> 
+                        </goals>
+                    </execution>
+                </executions> 
+            </plugin>
+                        
+                        
+                        
+                        
+                        
+                        
+                        
             <!-- CODE COVERAGE -->
             <plugin>
                 <groupId>org.jacoco</groupId>
