--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
  </configuration>
 <executions>
 <execution>
- <id>pre-integration-test</id 
+    <id>pre-integration-test</id> 
 <phase>pre-integration-test</phase>
 <goals>
 <goal>prepare-agent</goal>
